--- a/templates/base-002.html
+++ b/templates/base-002.html
@@ -22,6 +22,10 @@
     <link href="{{ url_for('static', filename='css/freelancer.min.css') }}" rel="stylesheet">
     <!--<link href="{{ url_for('static', filename='css/main.css') }}">-->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/lightbox.min.css') }}">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/main.css') }}"
+    />
     <script src="{{ url_for('static', filename='js/lightbox-plus-jquery.min.js') }}"></script>
 
 
