--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -5,7 +5,7 @@
     <div class="container">
 
         <!-- Portfolio Section Heading -->
-        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Fox Linton Interiors</h2>
+        <h2 class="cat-heading page-section-heading text-center text-uppercase text-secondary mb-0">Testimonials</h2>
         <!-- Icon Divider -->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
@@ -21,21 +21,15 @@
     <!-- About Section Content -->
 
     <div class="row">
-{% for fox in paddy_photodb %}
-        <figure class="col-md-4">
-            <div id="wrapper-002"> 
-            
-            <a href="{{ fox.url }}" width=400 class="hover"
-          data-responsive="true"
-          data-lightbox="mygallery"
-          data-title="{{ fox.name }}">
-                    <img alt="picture" src="{{ fox.url }}"
-                        class="img-fluid"></a><br><br>
-                <p class="text-002 lead">{{ fox.name }}</p>
-            </div>
-            
-        </figure>
-     {% endfor %}
+
+   {%block head%} {%endblock%}
+    <!-- Ginger2 Syntax template for Flask-->
+  </head>
+  <body>
+    {%block body%} {%endblock%}
+    <!-- Ginger2 Syntax template for Flask-->
+
+
      </div>
      <br><br>
 </div>
