--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -29,24 +29,32 @@
     {%block body%} 
     
     <div class="content">
-  <h1>To Do List</h1>
+
 
   <table>
     <tr>
-      <th>Task</th>
+      <th>Message</th>
       <th>Added</th>
       <th>Actions</th>
     </tr>
+    {% for task in tasks %}
+
     <tr>
-      <td></td>
-      <td></td>
+      <td>{{ task.content }}</td>
+      <td>{{ task.date_created.date() }}</td>
       <td>
         <a href="">Delete</a>
         <br />
         <a href="">Update</a>
       </td>
     </tr>
+    {% endfor %}
   </table>
+
+  <form action="/testimonials" method="POST">
+    <input type="text" name="content" id="content" />
+    <input type="submit" value="Add Task" />
+  </form>
 </div>
     {%endblock%}
     <!-- Ginger2 Syntax template for Flask-->
