--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -11106,6 +11106,8 @@ figure img {
   margin-right: auto;
 }
 
+
+
 .cat-heading {
   margin-top: 80px;
 }
@@ -11114,4 +11116,59 @@ figure img {
   width: 29%;
   float: left;
   margin: 2%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+body, html {
+    margin: 0;
+    
+}
+
+.content {
+    margin: 0 auto;
+    width: 400px;
+}
+
+.container-002 {
+    margin-top: 0px;
+    width: 100%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table, td, th {
+    border: 1px solid #aaa;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    height: 30px;
+}
+
+td {
+    text-align: center;
+    padding: 5px;
+}
+
+.form {
+    margin-top: 20px;
+}
+
+#content {
+    width: 70%;
 }
