--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,43 @@
-body {
-  margin: 0;
-  font-family: sans-serif;
+body, html {
+    margin: 0;
+    
+}
+
+.content {
+    margin: 0 auto;
+    width: 400px;
+}
+
+.container-002 {
+    margin-top: 0px;
+    width: 100%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table, td, th {
+    border: 1px solid #aaa;
 }
 
 table {
-  border: 1px solid black;
+    border-collapse: collapse;
+    width: 100%;
 }
+
+th {
+    height: 30px;
+}
+
 td {
-  border: 1px solid black;
+    text-align: center;
+    padding: 5px;
+}
+
+.form {
+    margin-top: 20px;
+}
+
+#content {
+    width: 70%;
 }
