--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -23,13 +23,57 @@
     <div class="row">
 
    {%block head%} {%endblock%}
+   
     <!-- Ginger2 Syntax template for Flask-->
   </head>
   <body>
     {%block body%} 
+  <style>body, html {
+    margin: 0;
     
-    <div class="content">
+}
 
+.content {
+    margin: 0 auto;
+    width: 400px;
+}
+
+.container-002 {
+    margin-top: 0px;
+    width: 100%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table, td, th {
+    border: 1px solid #aaa;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    height: 30px;
+}
+
+td {
+    text-align: center;
+    padding: 5px;
+}
+
+.form {
+    margin-top: 20px;
+}
+
+#content {
+    width: 70%;
+}</style>
+    
+    
+<div class="container-002">
 
   <table>
     <tr>
@@ -37,6 +81,7 @@
       <th>Added</th>
       <th>Actions</th>
     </tr>
+    
     {% for task in tasks %}
 
     <tr>
@@ -49,11 +94,11 @@
       </td>
     </tr>
     {% endfor %}
-  </table>
+  </table><br><br>
 
   <form action="/testimonials" method="POST">
     <input type="text" name="content" id="content" />
-    <input type="submit" value="Add Task" />
+    <input type="submit" value="Add Testimonial" />
   </form>
 </div>
     {%endblock%}
