--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -10753,7 +10753,7 @@ a.text-dark:focus {
 #mainNav .navbar-brand {
   color: #fff;
   margin: auto;
-  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 #mainNav .navbar-nav {
